02. gateway-nginx-controller-example/demo_namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: gateway-demo
  labels:
    name: gateway-demo
